# MachineLearningTetris

./: .gitignore  CMakeLists.txt  README.txt
TetrisModelV1/: FeatureExtractor.cpp  FeatureExtractor.h  TetrisModelV1.cpp  TetrisModelV1.h  TetrisModelV1Runner.cpp  TetrisModelV1Runner.h  TetrisModelV1Trainer.cpp  TetrisModelV1Trainer.h  featureExtractor.cpp  featureExtractor.h  main.cpp
TetrisModelV2/: TetrisModelV2.cpp  TetrisModelV2.h  TetrisModelV2Runner.cpp  TetrisModelV2Runner.h  TetrisModelV2Trainer.cpp  TetrisModelV2Trainer.h  featureExtractor.cpp  featureExtractor.h  main.cpp
simplified-tetris/: CMakeLists.txt  SimplifiedTetris.cpp  SimplifiedTetris.h  convert.py  main.cpp  pieces.h
